# bvhsdk

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
bvhsdk/: __init__.py  anim.py  bvh.py  egocentriccoord.py  ik.py  mathutils.py  plotanimation.py  retarget.py  skeletonmap.py  surface.py
bvhsdk/gui/: main.py
docs/source/: _index.md  bvhsdk.gui.md  bvhsdk.gui.rst  bvhsdk.md  bvhsdk.rst  conf.py  example.md  index.md  index.rst  modules.md  modules.rst  usage.md
